@@ -23,6 +23,7 @@ class Installed(Distribution):
         self.extractMetadata()
 
     def read(self):
+        opj = os.path.join
         if self.package is not None:
             package = self.package.__package__
             if package is None:
@@ -30,12 +31,19 @@ class Installed(Distribution):
             pattern = '%s*.egg-info' % package
             file = getattr(self.package, '__file__', None)
             if file is not None:
+                candidates = []
+                def _add_candidate(where):
+                    candidates.extend(glob.glob(where))
+                for entry in sys.path:
+                    if file.startswith(entry):
+                        _add_candidate(opj(entry, 'EGG-INFO')) # egg?
+                        _add_candidate(opj(entry, pattern)) # dist-installed?
                 dir, name = os.path.split(self.package.__file__)
-                candidates = glob.glob(os.path.join(dir, pattern))
-                candidates.extend(glob.glob(os.path.join(dir, '..', pattern)))
+                _add_candidate(opj(dir, pattern))
+                _add_candidate(opj(dir, '..', pattern))
                 for candidate in candidates:
                     if os.path.isdir(candidate):
-                        path = os.path.join(candidate, 'PKG-INFO')
+                        path = opj(candidate, 'PKG-INFO')
                     else:
                         path = candidate
                     if os.path.exists(path):
